# mimic-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEV_GUIDE.md  README.md
.github/workflows/: release.yml
crates/mimic-core/: Cargo.toml
crates/mimic-core/src/: config.rs  models.rs
crates/mimic-core/src/db/: api_groups.rs  app_config.rs  connector.rs  mocked_routes.rs  mod.rs  queries.rs  traffice_logs.rs
crates/mimic-server/: Cargo.toml
crates/mimic-server/src/: helpers.rs  lib.rs  queries.rs  route_handlers.rs  route_table_helper.rs  server.rs  types.rs
crates/mimic-ui/: Cargo.toml  build.rs
crates/mimic-ui/src/: app.rs  constants.rs  main.rs
crates/mimic-ui/src/assets/: windows_manifest.rc
crates/mimic-ui/src/assets/icons/: icon.icns
crates/mimic-ui/src/modals/: settings_modal.rs
crates/mimic-ui/src/panels/: details_panel.rs  mod.rs  sidebar_panel.rs  top_panel.rs  traffic_panel.rs
crates/mimic-ui/src/panels/helpers/: app_helpers.rs  details_helpers.rs  mod.rs
crates/mimic-ui/src/store/: api_group_store.rs  app_store.rs  details_store.rs  mocked_route_store.rs  mod.rs  server_store.rs  settings_store.rs  store_traits.rs
crates/pl-components/: Cargo.toml
crates/pl-components/src/: globals.rs  lib.rs  theme.rs
crates/pl-components/src/components/: mod.rs  pl_badge.rs  pl_button.rs  pl_frame.rs  pl_input.rs  pl_label.rs  pl_section_label.rs
crates/pl-components/src/panels/: mod.rs  panel_header.rs  panel_layout_row.rs
examples/: index.html
examples/data/: auth_login.json  auth_me.json  order_detail.json  orders_created.json  products_list.json  users_list.json  webhook_ack.json
