[package]
name    = "mimic-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5"
rusqlite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
uuid = { version = "1", features = ["v4"] }
