[package]
name    = "mimic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mimic-core = { path = "../mimic-core" }
tokio      = { workspace = true }
axum       = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
rusqlite   = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
